example/lib/src/arbs/errors/app_ja.arb
{
  "@@locale": "ja",
  "@@author": "example@gmail.com",
  "@@last_modified": "2026-07-14T13:18:25.440497Z",
  "@@comment": "Generated from Google Sheets",
  "error": "エラーが発生しました",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "予期しないエラーが発生しました",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "バグレポートが正常に送信されました。",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}